<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Ros All Sensors"</string>
    <string name="help_title">About Android Sensors Driver</string>
    <string name="help_message">Android Sensors Driver is an open source project!  For more information, go to the \'Wiki\'.  To report bugs or request features click \'Report\'.</string>
    <string name="help_ok">OK</string>
    <string name="help_report">Report</string>
    <string name="help_wiki">Wiki</string>
    <string name="robot_name">Robot Name:</string>
    <string name="phone1">phone1</string>
    <string name="AllSensors">All Sensors</string>
    <string name="Sensors">Sensors</string>
    <string name="Camera">Camera</string>
    <string name="Help">Help</string>

</resources>
