<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

    <TextView
        android:id="@+id/robot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="left"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignBottom="@+id/robot_text"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/robot_text"
        android:layout_toRightOf="@+id/robot_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/phone1"
        android:inputType="text"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/robot_name"
                android:layout_alignParentLeft="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllSensors"
            android:id="@+id/radioButtonAllSensors"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sensors"
            android:id="@+id/radioButtonSensors"
            android:checked="false"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Camera"
            android:id="@+id/radioButtonCamera"
            android:checked="false"
            android:onClick="onRadioButtonClicked"/>
   </RadioGroup>

</RelativeLayout>